--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,37 +8,18 @@ $form-text: #495057;
 $auth-bgc: #F5F6F8;
 $form-shadow: #979797;
 $form-input-color: #BECAD6;
+$sidebar-icon-disabled: #CACEDB;
+$sidebar-item-active: #FBFBFB;
+$header-text: #767F9D;
+$user-text: #5A6169;
+$footer-text: #818EA3;
 
 //fonts
 @font-face {
-	font-family: 'Roboto';
-	src: url('./fonts/roboto-light.eot');
-	src: local('☺'), url('./fonts/roboto-light.woff') format('woff'), url('./fonts/roboto-light.ttf') format('truetype'), url('./fonts/roboto-light.svg') format('svg');
-	font-weight: 300;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Roboto';
-	src: url('./fonts/roboto-regular.eot');
-	src: local('☺'), url('./fonts/roboto-regular.woff') format('woff'), url('./fonts/roboto-regular.ttf') format('truetype'), url('./fonts/roboto-regular.svg') format('svg');
+	font-family: 'Helvetica';
+	src: url('./fonts/Helvetica.ttf');
+	src: local('☺'), url('./fonts/Helvetica.ttf') format('truetype');
 	font-weight: 400;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Roboto';
-	src: url('./fonts/roboto-medium.eot');
-	src: local('☺'), url('./fonts/roboto-medium.woff') format('woff'), url('./fonts/roboto-medium.ttf') format('truetype'), url('./fonts/roboto-medium.svg') format('svg');
-	font-weight: 500;
-	font-style: normal;
-}
-
-@font-face {
-	font-family: 'Roboto';
-	src: url('./fonts/roboto-bold.eot');
-	src: local('☺'), url('./fonts/roboto-bold.woff') format('woff'), url('./fonts/roboto-bold.ttf') format('truetype'), url('./fonts/roboto-bold.svg') format('svg');
-	font-weight: 700;
 	font-style: normal;
 }
 
