--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,9 @@
 $main-accent: #0EC261;
 $blue: #007BFF;
 $text: #3D5170;
+$gray: #999999;
 $light-gray: #E9ECEF;
+$black: #121212;
 $red: #CB3656;
 $form-text: #495057;
 $auth-bgc: #F5F6F8;
