--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,18 +1,30 @@
 @import '../../styles/main.scss';
 
 .sidebar {
-  width: 285px;
+  max-width: 285px;
+  width: 25%;
   height: 100vh;
   position: sticky;
   display: flex;
+  flex: 1 1 auto;
   flex-flow: column nowrap;
-  box-shadow: 0px 1px 75px 0px #5A61691C;
+  box-shadow: 1px 0 45px 5px rgba($color: #5A6169, $alpha: .2);
+  @include from($tablet) {
+    max-width: 58px;
+  }
+  @include from(425) {
+    display: none;
+  }
   &__header {
     display: flex;
     align-items: center;
-    padding-left: 50px;
+    padding: 0 25px 0 50px;
     height: 68px;
     box-shadow: 1px 1px 0px 0px #E1E5EB;
+    @include from($tablet) {
+      padding-left: 19px;
+      padding-right: 0;
+    } 
   }
   &__logo {
     width: 22px;
@@ -24,6 +36,9 @@
     font-size: 1.6rem;
     color: $text;
     margin-left: 7px;
+    @include from($tablet) {
+      display: none;
+    }
   }
 }
 
