--- a/src/components/Sidebar/SidebarNavItem/SidebarNavItem.scss
+++ b/src/components/Sidebar/SidebarNavItem/SidebarNavItem.scss
@@ -14,7 +14,7 @@
     padding: 0px 0px 0 22px;
   }
   &__text {
-    font-family: "Helvetica";
+    font-family: "Helvetica", sans-serif;
     font-weight: 400;
     font-size: 1.5rem;
     color: $text;
