--- a/src/components/Auth/Auth.scss
+++ b/src/components/Auth/Auth.scss
@@ -29,6 +29,7 @@
     font-family: "Helvetica";
     font-weight: 400;
     color: $blue;
+    background-color: #fff;
   }
   &__footer {
     display: flex;
