--- a/src/components/MainButton/MainButton.scss
+++ b/src/components/MainButton/MainButton.scss
@@ -4,7 +4,7 @@
   width: 110px;
   height: 30px;
   border-radius: 4px;
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-size: 1.15rem;
 }
