--- a/src/components/OrderPage/OrderPage.scss
+++ b/src/components/OrderPage/OrderPage.scss
@@ -24,7 +24,7 @@
 }
 
 .order-header {
-  font-family: "Helvetica";
+  font-family: "Helvetica", sans-serif;
   font-weight: 400;
   font-size: 2.9rem;
   color: $text;
