--- a/src/components/OrderPage/OrderPage.scss
+++ b/src/components/OrderPage/OrderPage.scss
@@ -17,7 +17,7 @@
   flex: 1 1 auto;
   height: 100%;
   background-color: #f5f6f8;
-  padding: 29px 0 0 32px;
+  padding: 29px 20px 0 32px;
   @include from(425) {
     padding-bottom: 70px;
   }
@@ -40,6 +40,7 @@
 }
 
 .order-card__shadow {
+  max-width: 1062px;
   border-radius: 9px;
   box-shadow: 0 0 20px 10px rgba($color: #5A6169, $alpha: .2);
 }
