--- a/src/components/OrderPage/OrderPagination/OrderPagination.scss
+++ b/src/components/OrderPage/OrderPagination/OrderPagination.scss
@@ -4,6 +4,7 @@
     justify-content: center;
     align-items: center;
     background-color: #fff;
+    max-width: 1062px;
     min-height: 60px;
     border-radius: 0 0 9px 9px;
   }
