--- a/src/components/MainButton/MainButton.scss
+++ b/src/components/MainButton/MainButton.scss
@@ -23,6 +23,9 @@
     background-color: $red;
     &-entities {
       margin-right: 15px;
+      @include from(1035) {
+        margin-bottom: 5px;
+      }
     }
   }
 }
