--- a/src/components/OrderPage/OrderPage.scss
+++ b/src/components/OrderPage/OrderPage.scss
@@ -7,8 +7,15 @@
 .content-wrapper {
   display: flex;
   flex-flow: column;
-  width: 100%;
+  // width: calc(100% - 285px);
+  width: 80%;
   min-height: 100%;
+  @include from($tablet) {
+    width: 94%;
+  }
+  @include from(445) {
+    width: 100%;
+  }
 }
 
 .main {
@@ -18,7 +25,7 @@
   height: 100%;
   background-color: #f5f6f8;
   padding: 29px 20px 0 32px;
-  @include from(425) {
+  @include from(445) {
     padding-bottom: 70px;
   }
 }
