--- a/src/components/OrderPage/OrderPageInfo/OrderPageInfo.scss
+++ b/src/components/OrderPage/OrderPageInfo/OrderPageInfo.scss
@@ -20,6 +20,7 @@
 }
 
 .details {
+  
   &__address {
     font-family: "Roboto", sans-serif;
     font-weight: 400;
@@ -49,6 +50,7 @@
   &__details {
     @include from($tablet) {
       padding-top: 15px;
+      margin-bottom: 10px;
     }
   }
   &__price {
