--- a/src/components/Sidebar/SidebarNavItem/SidebarNavItem.scss
+++ b/src/components/Sidebar/SidebarNavItem/SidebarNavItem.scss
@@ -2,7 +2,7 @@
 
 .sidebar-item {
   display: flex;
-  max-width: 288px;
+  width: 100%;
   flex: 1 1 auto;
   flex-flow: row nowrap;
   align-items: center;
@@ -11,7 +11,7 @@
   box-shadow: 1px 1px 0px 0px #E1E5EB;
   cursor: pointer;
   @include from($tablet) {
-    padding: 0px 0px 0 22px;
+    padding: 0px 0% 0 35%;
   }
   &__text {
     font-family: "Helvetica", sans-serif;
