Fix layout entities page. Remove inset shadow from entities table block

--- a/src/components/CardHeader/CardHeader.scss
+++ b/src/components/CardHeader/CardHeader.scss
@@ -5,7 +5,7 @@
   flex: 0 1 auto;
   justify-content: space-between;
   align-items: center;
-  max-width: 1062px;
+  width: 100%;
   height: 60px;
   background-color: #fff;
   border-radius: 9px 9px 0 0;
