--- a/src/components/CardPagination/CardPagination.scss
+++ b/src/components/CardPagination/CardPagination.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     background-color: #fff;
-    max-width: 1062px;
+    width: 100%;
     min-height: 60px;
     border-radius: 0 0 9px 9px;
   }
