--- a/src/components/EntitiesPage/EntitiesMain/EntitiesMain.scss
+++ b/src/components/EntitiesPage/EntitiesMain/EntitiesMain.scss
@@ -1,2 +1,5 @@
 @import "../../../styles/main.scss";
 
+.ant-table-ping-right:not(.ant-table-has-fix-right) .ant-table-container::after {
+ box-shadow: none;
+}
